force-app/main/default/objects/MUSW__Fee__c/fields/Acc_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>Acc_AR_Code__c</fullName>
    <formula>&quot;AR_&quot;+text(MUSW__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc AR Code</label>
    <type>Text</type>
</CustomField>