force-app/main/default/objects/MUSW__Fee__c/fields/Acc_Cash_Code__c.field-meta.xml
<CustomField>
    <fullName>Acc_Cash_Code__c</fullName>
    <formula>&quot;Cash_&quot;+text(MUSW__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Cash Code</label>
    <type>Text</type>
</CustomField>