force-app/main/default/objects/MUSW__Fee__c/fields/Acc_Rev_Code__c.field-meta.xml
<CustomField>
    <fullName>Acc_Rev_Code__c</fullName>
    <formula>&quot;Rev_&quot;+text(MUSW__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Rev Code</label>
    <type>Text</type>
</CustomField>