force-app/main/default/objects/MUSW__Fee__c/fields/AVO_Compliance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>AVO_Compliance__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>