force-app/main/default/objects/MUSW__Fee__c/fields/Avo_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Avo_GL_Account__c</fullName>
    <label>GL Account</label>
    <type>TextArea</type>
</CustomField>