force-app/main/default/objects/MUSW__Fee__c/fields/AVO_SubType__c.field-meta.xml
<CustomField>
    <fullName>AVO_SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Printing Document</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Unpermitted groundwater withdrawal and irrigation</fullName>
            </value>
            <value>
                <fullName>Irrigating acres in excess of permitted amount from a surface water source</fullName>
            </value>
            <value>
                <fullName>Unpermitted surface water withdrawal and irrigation</fullName>
            </value>
            <value>
                <fullName>Irrigating acres in excess of permitted amount from a groundwater source</fullName>
            </value>
            <value>
                <fullName>Tampering with surface water meter</fullName>
            </value>
            <value>
                <fullName>Tampering with groundwater meter</fullName>
            </value>
            <value>
                <fullName>Operating permitted surface water withdrawal site without an EPD approved water meter</fullName>
            </value>
            <value>
                <fullName>Operating permitted groundwater withdrawal site without an EPD approved water meter</fullName>
            </value>
            <value>
                <fullName>Failure to follow water conservation measures required by surface water withdrawal permit</fullName>
            </value>
            <value>
                <fullName>Failure to follow water conservation measures required by groundwater withdrawal permit</fullName>
            </value>
            <value>
                <fullName>Failure to comply with low flow conditions in surface water permit</fullName>
            </value>
            <value>
                <fullName>Surface water source located in yellow zone</fullName>
            </value>
            <value>
                <fullName>Groundwater source located in yellow zone</fullName>
            </value>
            <value>
                <fullName>Surface water source located in red zone</fullName>
            </value>
            <value>
                <fullName>Groundwater source located in red zone</fullName>
            </value>
            <value>
                <fullName>Between 50 and 100 acres irrigated from a surface water source without/in excess of permit</fullName>
            </value>
            <value>
                <fullName>Between 50 and 100 acres irrigated from a groundwater source without/in excess of permit</fullName>
            </value>
            <value>
                <fullName>More than 100 acres irrigated from a groundwater source without/in excess of permit</fullName>
            </value>
            <value>
                <fullName>Use of a surface water source during drought</fullName>
            </value>
            <value>
                <fullName>Use of a groundwater source during drought</fullName>
            </value>
            <value>
                <fullName>Ability to Pay</fullName>
            </value>
            <value>
                <fullName>Timely Response to Notice of Violation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>More than 100 acres irrigated from a surface water source without/in excess of permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>