force-app/main/default/objects/MUSW__Fee__c/fields/BGBK__Cart__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>BGBK__Cart__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>