force-app/main/default/objects/MUSW__Fee__c/fields/clariti__CashLedgerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__CashLedgerAccountNumber__c</fullName>
    <description>Number of the Cash Ledger Account. A new Ledger Account will be created with this number if it does not already exist.</description>
    <inlineHelpText>Number of the Cash Ledger Account. A new Ledger Account will be created with this number if it does not already exist.</inlineHelpText>
    <label>Cash Ledger Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>