force-app/main/default/objects/MUSW__Fee__c/fields/Contest__c.field-meta.xml
<CustomField>
    <fullName>Contest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contest</label>
    <referenceTo>BGCK__Contest__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>