force-app/main/default/objects/MUSW__Fee__c/fields/Master_Fee_List__c.field-meta.xml
<CustomField>
    <fullName>Master_Fee_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Fee List</label>
    <referenceTo>MUSW__Master_Fee_List__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>