force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Account__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated account record.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fees as Account</relationshipLabel>
    <relationshipName>Account_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>