force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amended_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amended_Amount__c</fullName>
    <description>Optional. This is used in case the Fee amount needs to be changed and the system needs to keep track of the original amount.</description>
    <label>Amended Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>