force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount__c</fullName>
    <description>An obligation amount (fee) that needs to be paid.</description>
    <inlineHelpText>Leave blank for default value (set after Save)</inlineHelpText>
    <label>Total</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>