force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amount_Waived__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Waived__c</fullName>
    <description>Amount that needs to be waived. This impacts the outstanding amount of the fee.</description>
    <label>Waived</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>