force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Billable__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents if a fee has to be invoiced.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>