force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Check_Number__c</fullName>
    <description>Deprecated. Used for the simple implementation of historical data.</description>
    <label>Check Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>