force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Complaint2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated complaint record.</description>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>