force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Complaint__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Refer to the MUSW__Complaint2__c lookup field.</description>
    <label>Complaint (Deprecated)</label>
    <referenceTo>MUSW__Complaint__c</referenceTo>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>