force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Effective_Date__c</fullName>
    <description>Deprecated</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>