force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Fee_Paid_Date2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Paid_Date2__c</fullName>
    <description>Date the fee payment was made. The System populates the value when a payment is allocated to the fee.</description>
    <label>Fee Paid Date</label>
    <type>Date</type>
</CustomField>