force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__License2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated license record.</description>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>