force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Outstanding_Fee__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Outstanding_Fee__c</fullName>
    <description>Amount outstanding based on the following formula: (Amount) - (Amended Amount) - (Waived Amount) - (Paid Amount).</description>
    <formula>If(MUSW__Amount__c - MUSW__Amount_Waived__c - MUSW__Amount_Paid__c - MUSW__Amended_Amount__c &lt; 0, 0, MUSW__Amount__c - MUSW__Amount_Waived__c - MUSW__Amount_Paid__c - MUSW__Amended_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>