force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Paid_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Used for the simple implementation of historical data.</description>
    <label>Paid By (Deprecated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fees as Paid By Account (Deprecated)</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>