force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Payment_Method__c</fullName>
    <description>Deprecated. Used for the simple implementation of historical data.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>