force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Permit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. Used for the simple implementation of historical data.</description>
    <label>Permit (Deprecated)</label>
    <referenceTo>MUSW__Permit__c</referenceTo>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>