force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Planning_Application__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Planning_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated planning application record.</description>
    <label>Planning Application</label>
    <referenceTo>MUSW__Planning_Application__c</referenceTo>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>