force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Price_Per_Unit__c</fullName>
    <description>Optional. used if the Amount needs to be derived based on Quantity and price per unit.</description>
    <inlineHelpText>Price per Quantity</inlineHelpText>
    <label>Price Per Unit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>