force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Rank__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Rank__c</fullName>
    <defaultValue>999</defaultValue>
    <description>Priority of the payment order. The fee with the lower ranking number gets paid first. For example, rank &quot;2&quot; would be paid before rank &quot;4&quot;.</description>
    <label>Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>