force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt_Number__c</fullName>
    <description>Deprecated. Used for the simple implementation of historical data.</description>
    <label>Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>