force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Test__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System field.</description>
    <label>Test</label>
    <referenceTo>BGCM__Test__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>