force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <description>The type of fee. Each type may have a different accounting code.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Violations</fullName>
            </value>
            <value>
                <fullName>Upward Adjustments</fullName>
            </value>
            <value>
                <fullName>Downward Adjustments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>