force-app/main/default/objects/MUSW__Fee__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <formula>IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = &quot;&quot;),
IF(OR(ISNULL( MUSW__Application2__c ), MUSW__Application2__c = &quot;&quot;),
IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = &quot;&quot;),
&quot;&quot;,
MUSW__License2__r.MUSW__Primary_Licensee__c ),
MUSW__Application2__r.MUSW__Account__c ),
MUSW__Permit2__r.MUSW__Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account</label>
    <type>Text</type>
</CustomField>