force-app/main/default/objects/MUSW__Fee__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c  = &quot;&quot;),
	If(OR(ISNULL( MUSW__Application2__c ),  MUSW__Application2__c  = &quot;&quot;),
		If(OR(ISNULL( MUSW__Complaint2__c ),  MUSW__Complaint2__c  = &quot;&quot;),
			IF(OR(ISNULL( MUSW__License2__c ),  MUSW__License2__c  = &quot;&quot;),
			&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; MUSW__License2__c, MUSW__License2__r.Name ,&quot;_parent&quot; )),
			HYPERLINK( &quot;/&quot; &amp; MUSW__Complaint2__c,MUSW__Complaint2__r.Name,&quot;_parent&quot; )),
		HYPERLINK( &quot;/&quot; &amp; MUSW__Application2__c,MUSW__Application2__r.Name,&quot;_parent&quot; )),
	HYPERLINK( &quot;/&quot; &amp; MUSW__Permit2__c,MUSW__Permit2__r.Name,&quot;_parent&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>