force-app/main/default/objects/MUSW__Fee__c/validationRules/BGBK__Fee_Invoiced_lock_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Fee_Invoiced_lock_Amount</fullName>
    <active>true</active>
    <description>can&apos;t change fee amounts if non-voided invoiced</description>
    <errorConditionFormula>AND( NOT(ISPICKVAL(BGBK__Invoice__r.BGBK__Status__c,&apos;Voided&apos;)), BGBK__Invoice__c != null,  ISCHANGED(MUSW__Amount__c ))</errorConditionFormula>
    <errorMessage>Cannot change the Amount of an Invoiced Fee. Void invoice before changing the Fee Amount</errorMessage>
</ValidationRule>