force-app/main/default/objects/MUSW__Fee__c/validationRules/MUSW__Currency_Enforce_Decimal_Places.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Currency_Enforce_Decimal_Places</fullName>
    <active>true</active>
    <errorConditionFormula>ROUND(MUSW__Amount__c ,2) != MUSW__Amount__c</errorConditionFormula>
    <errorDisplayField>MUSW__Amount__c</errorDisplayField>
    <errorMessage>This is a currency field and can not have more than two decimal places</errorMessage>
</ValidationRule>