force-app/main/default/objects/MUSW__Fee__c/validationRules/MUSW__Waived_Amount_greater_than_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Waived_Amount_greater_than_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Amount__c &lt; MUSW__Amount_Waived__c</errorConditionFormula>
    <errorMessage>Can not waive more than Amount</errorMessage>
</ValidationRule>