force-app/main/default/objects/MUSW__Fee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Account__c</columns>
    <columns>MUSW__Amount__c</columns>
    <columns>MUSW__Outstanding_Fee__c</columns>
    <columns>MUSW__Amount_Paid__c</columns>
    <columns>MUSW__License__c</columns>
    <columns>MUSW__Permit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>